--- a/src/app/components/daily-tasks-board/daily-tasks-board.component.html
+++ b/src/app/components/daily-tasks-board/daily-tasks-board.component.html
@@ -1,1 +1,7 @@
-<p>daily-tasks-board works!</p>
+<div class="board-container" cdkDropList (cdkDropListDropped)="drop($event)">
+  <div class="example-box"
+       *ngFor="let currentTeamMember of filterState.allTeamMembersList"
+       cdkDrag>
+    <app-team-member-row [teamMember]="currentTeamMember"></app-team-member-row>
+  </div>
+</div>
