--- a/src/app/components/filters-section/filters-section.component.css
+++ b/src/app/components/filters-section/filters-section.component.css
@@ -1,8 +1,8 @@
 .filters-container {
-  text-align: center;
-  margin: 25px 0;
+  width: 50%;
+  margin: 25px auto;
 }
 
 .filters-container .filter-checkbox {
-  margin: 0 10px;
+  flex: 1;
 }
