--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,9 @@ html, body {
   height: 100%;
 }
 
-html { background-color: rgb(130, 141, 206); }
+html {
+  background-color: rgb(130, 141, 206);
+}
 
 body {
   margin: 0;
@@ -19,7 +21,6 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  height: 100%;
   width: 100%;
   align-items: center;
   justify-content: center;
