--- a/src/app/components/daily-tasks-board/daily-tasks-board.component.html
+++ b/src/app/components/daily-tasks-board/daily-tasks-board.component.html
@@ -1,7 +1,5 @@
 <div class="board-container" cdkDropList (cdkDropListDropped)="drop($event)">
-  <div class="example-box"
-       *ngFor="let currentTeamMember of filterState.allShownTeamMembersList"
-       cdkDrag>
+  <div class="cursor-move" *ngFor="let currentTeamMember of filterState.allShownTeamMembersList" cdkDrag>
     <app-team-member-row [teamMember]="currentTeamMember"></app-team-member-row>
   </div>
 </div>
